# apid/src/openapi.rs
@@ -82,7 +82,8 @@ use utoipa::OpenApi;
         crate::update_api::api_v1_update_install,
         crate::update_api::api_v1_update_mark,
         crate::update_api::api_v1_update_rollback,
-        crate::update_api::api_v1_update_reboot_override
+        crate::update_api::api_v1_update_reboot_override,
+        crate::update_api::api_v1_update_clear_suppression
     )
 )]
 struct ApiDoc;
